--- a/src/table.css
+++ b/src/table.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   border-right: 2px solid red;
   padding: 0 10px;
+  width: 250px;
 }
 
 .table-header {
@@ -17,6 +18,16 @@
   overflow-y: scroll;
   height: 100%;
   margin-top: 12px;
+}
+
+.table-body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.table-body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .table-header > .content {
